<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidUnresolvableTag -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="5"
    android:background="@color/white"
    tools:context=".pageThreeOfTen">

    <!-- ............1. Primer Bloque...................-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button2"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:text="@string/atras"
            android:textColor="#1eea00"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-6dp"
            android:gravity="center"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:text="@string/Text_page"
            android:textColor="#004D40"
            android:textSize="19sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!-- ............2. Segundo Bloque...................-->


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/viewpageuno" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            app:srcCompat="@drawable/barra" />



    </LinearLayout>

    <!-- ............3. Tercer Bloque...................-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton12"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_margin="20dp"
            android:background="@color/white"
            app:srcCompat="@drawable/iconopage"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:padding="15dp"
            android:layout_margin="2dp"
            android:text="@string/abc"
            android:textColor="#004D40"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="38dp"
            android:layout_marginLeft="-240dp"


            android:text="@string/abcd" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:orientation="horizontal"
        android:background="@color/white">

        <!-- ............3.1. linea verde...................-->

        <ImageButton
            android:id="@+id/imageButton14"
            android:layout_width="400dp"
            android:layout_height="3dp"
            android:background="@color/white"
            app:srcCompat="@drawable/lineagreen"
            tools:ignore="SpeakableTextPresentCheck" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">

        <!-- ............3.1. linea verde...................-->


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/DI"
            android:textColor="#004D40"
            android:textSize="19sp"
            android:padding="15dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tipo de documento"
        android:layout_marginLeft="15dp"/>

    <AutoCompleteTextView
        android:id="@+id/actv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Documento"
        android:completionThreshold="1"
        android:completionHint="Documento"
        android:dropDownAnchor="@id/textView7"
        android:layout_marginLeft="15dp"/>


    <TextView
        android:id="@+id/actv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Número de documento"
        android:layout_marginLeft="15dp"/>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">

        <!-- ............3.1. linea verde...................-->



    </LinearLayout>

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="1234567890"
        android:layout_marginLeft="15dp"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Fecha de expedición dl documento"
        android:layout_marginLeft="15dp"/>

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="01/01/2010"
        android:layout_marginLeft="15dp"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Fecha de nacimiento"
        android:layout_marginLeft="15dp"/>

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="01/01/1992"
        android:layout_marginLeft="15dp"/>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="Genero" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Documento"
        android:completionThreshold="1"
        android:completionHint="Documento"
        android:dropDownAnchor="@id/textView7"
        android:layout_marginLeft="15dp"/>


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/CC"
        android:textColor="#004D40"
        android:textSize="19sp"
        android:padding="15dp"
        android:layout_marginLeft="5dp"/>



</LinearLayout>