<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidUnresolvableTag -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="1"
    android:background="@color/white"
    tools:context=".pageThreeOfTen">

  <!-- ............1. Primer Bloque...................-->

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight=".01"
      android:background="@color/white"
      android:backgroundTint="@color/white"
      android:orientation="horizontal">


    <Button
        android:id="@+id/button2"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:background="@color/white"
        android:textColor="#1eea00"
        android:textSize="50sp"
        android:text="@string/atras" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:paddingEnd="18dp"
        android:paddingStart="18dp"
        android:text="@string/number_phone"
        android:textColor="#004D40"
        android:textSize="17sp"
        android:textStyle="bold" />

  </LinearLayout>

  <!-- ............2. Segundo Bloque...................-->

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight=".01"
      app:srcCompat="@drawable/viewpage" />

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="3"
      android:orientation="vertical"
      android:outlineSpotShadowColor="@color/white"
      android:background="@color/white">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:srcCompat="@drawable/barra" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

      <ImageButton
          android:id="@+id/imageButton12"
          android:layout_width="wrap_content"
          android:layout_height="75dp"
          android:layout_margin="20dp"
          android:background="@color/white"
          app:srcCompat="@drawable/iconopage"
          />

      <TextView
          android:id="@+id/textView2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="26dp"
          android:layout_gravity="center"
          android:text="@string/ab"
          android:textSize="16sp" />


    </LinearLayout>

        <!-- ............3. Tercer Bloque...................-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        android:background="@color/white">

      <!-- ............3.1. linea verde...................-->

      <ImageButton
          android:id="@+id/imageButton14"
          android:layout_width="400dp"
          android:layout_height="10dp"
          android:background="@color/white"
          app:srcCompat="@drawable/lineagreen"
          tools:ignore="SpeakableTextPresentCheck" />


    </LinearLayout>

    <!-- ............4. Bloque ...................-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:background="@color/white">


      <EditText
          android:id="@+id/numberWrite"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="37dp"
          android:layout_marginTop="21dp"
          android:layout_weight="1"
          android:background="@color/white"
          android:elevation="5dp"
          android:ems="10"
          android:gravity="center"
          android:hint="@string/price_text_view2"
          android:inputType="textPersonName"
          android:textColor="#9E9E9E"
          android:textSize="26sp" />



    </LinearLayout>
    <!-- ............4. final Bloque ...................-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="0dp"
        android:background="@color/white">


      <Button
          android:id="@+id/buttonNum1"
          android:layout_width="128dp"
          android:layout_height="90dp"
          android:layout_marginTop="27dp"
          android:background="@color/white"
          android:onClick="escribirUno"
          android:text="1"
          android:textSize="45sp"
          android:textColor="#004b40"/>

      <Button
          android:id="@+id/buttonNum2"
          android:layout_width="128dp"
          android:layout_height="90dp"
          android:background="@color/white"
          android:layout_marginTop="27dp"
          android:onClick="escribirDos"
          android:text="2"
          android:textSize="45dp"
          android:textColor="#004b40"
           />

      <Button
          android:id="@+id/buttonNum3"
          android:layout_width="128dp"
          android:layout_height="90dp"
          android:background="@color/white"
          android:layout_marginTop="27dp"
          android:onClick="escribirTres"
          android:text="3"
          android:textSize="45dp"
          android:textColor="#004b40"
          />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@color/white">


      <Button
          android:id="@+id/buttonNum4"
          android:layout_width="128dp"
          android:layout_height="wrap_content"
          android:background="@color/white"
          android:onClick="escribirCuatro"
          android:text="4"
          android:textSize="45dp"
          android:textColor="#004b40"/>

      <Button
          android:id="@+id/buttonNum5"
          android:layout_width="128dp"
          android:layout_height="wrap_content"
          android:background="@color/white"
          android:onClick="escribirCinco"
          android:text="5"
          android:textSize="45sp"
          android:textColor="#004b40"/>

      <Button
          android:id="@+id/buttonNum6"
          android:layout_width="128dp"
          android:layout_height="wrap_content"
          android:background="@color/white"
          android:onClick="escribirSeis"
          android:text="6"
          android:textSize="45sp"
          android:textColor="#004b40"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@color/white">


      <Button
          android:id="@+id/buttonNum7"
          android:layout_width="128dp"
          android:layout_height="wrap_content"
          android:background="@color/white"
          android:onClick="escribirSiete"
          android:text="7"
          android:textColor="#004b40"
          android:textSize="45sp" />

      <Button
          android:id="@+id/buttonNum8"
          android:layout_width="128dp"
          android:layout_height="wrap_content"
          android:background="@color/white"
          android:onClick="escribirOcho"
          android:text="8"
          android:textSize="45sp"
          android:textColor="#004b40"/>

      <Button
          android:id="@+id/buttonNum9"
          android:layout_width="128dp"
          android:layout_height="wrap_content"
          android:background="@color/white"
          android:onClick="escribirNueve"
          android:text="9"
          android:textColor="#004b40"
          android:textSize="45sp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@color/white">

      <ImageButton
          android:id="@+id/imageButton5"
          android:layout_width="120dp"
          android:layout_height="match_parent"
          android:background="@color/white"
          app:srcCompat="@drawable/iconoborrado"
          android:onClick="borrar"
          android:layout_marginEnd="40dp"/>


      <ImageButton
          android:id="@+id/imageButton6"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="35dp"
          android:layout_weight="1"
          android:background="@color/white"
          android:onClick="escribirCero"
          app:srcCompat="@drawable/number_zero" />

      <ImageButton
          android:id="@+id/imageButton4"
          android:contentDescription= "@string/price_text_view2"
          android:layout_width="100dp"
          android:layout_height="match_parent"
          android:layout_marginTop="1dp"
          android:layout_marginEnd="20dp"
          android:background="@color/white"
          android:onClick="ok"
          android:scrollbarSize="25dp"
          app:srcCompat="@drawable/iconook"
          tools:ignore="SpeakableTextPresentCheck" />


    </LinearLayout>

  </LinearLayout>

</LinearLayout>
